--- a/SkyNights-221016/1016例会.md
+++ b/SkyNights-221016/1016例会.md
@@ -30,9 +30,21 @@
 
 #### 刀片式(Blade)
 
+![Blade Server](https://i.ebayimg.com/images/g/FkYAAOxyGxxSKdTM/s-l500.jpg)
+
+![IBM](https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/IBM_HS20_blade_server.jpg/1920px-IBM_HS20_blade_server.jpg)
+
+### 散热
+
+风道设计 (Cover)
+
 ### 以 R730 为例
 
+![R730 Configuration](https://cloud.tsinghua.edu.cn/seafhttp/files/d57715c2-0fe4-4837-939e-083859eab96a/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20003038.png)
 
+![Front Panel](https://cloud.tsinghua.edu.cn/thumbnail/6057def066574d83b9f6/1024/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20003249.png)
+
+![Back Panel](https://cloud.tsinghua.edu.cn/thumbnail/6057def066574d83b9f6/1024/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20003304.png)
 
 ## 组成单元
 
@@ -40,7 +52,27 @@
 
 ### 中央处理器 (CPU)
 
+#### Difference between server and PC CPU
+
+频率较低-单核弱
+核数高、缓存大-多核强
+总线吞吐速率大
+
+##### Intel
+
+![Xeon](https://cloud.tsinghua.edu.cn/thumbnail/6057def066574d83b9f6/1024/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20005952.png)
+
+![Core](https://cloud.tsinghua.edu.cn/thumbnail/6057def066574d83b9f6/1024/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20010157.png)
+
+##### AMD
+
+![EPYC](https://cloud.tsinghua.edu.cn/thumbnail/6057def066574d83b9f6/1024/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20005912.png)
+
+![Ryzen](https://cloud.tsinghua.edu.cn/thumbnail/6057def066574d83b9f6/1024/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-10-16%20010106.png)
+
 ### 内存 (Memory)
+
+Thx rxgg!!!!
 
 ### 电源 (Power Supply Unit, PSU)
 
@@ -88,8 +120,6 @@ A SCSI enclosure is a piece of hardware that helps your hard drive manage the tr
 
 #### RAID
 
-![H730](https://snpi.dell.com/snp/images/products/large/en-us~490-BDUT/490-BDUT.jpg)
-
 The SCSI programming uses RAID to protect you from data loss. When you’re working with data that hasn’t been saved to storage, SCSI ensures that all data exists on multiple drives, so that if one drive fails, the data will still exist on another.
 
 This process is called RAID (Redundant Array of Independent Disks). You can perform RAID on SATA technology, too, but it’s more efficient on SAS technology because SAS links more circuitry. Servers and workstations conduct so many transfers of temporary data that having RAID-capable technology is a necessity [8].
@@ -98,7 +128,7 @@ One final capability of SAS is that it allows for multipath input/output (I/O). 
 
 ##### RAID controllers
 
-![RAID adapter]()
+![H730](https://snpi.dell.com/snp/images/products/large/en-us~490-BDUT/490-BDUT.jpg)
 
 In hardware-based RAID, a physical controller is used to manage the RAID array. The controller can take the form of a PCI or PCI Express (PCIe) card, which is designed to support a specific drive format such as SATA or SCSI. (Some RAID controllers can also be integrated with the motherboard.) Hardware RAID controllers are also often referred to as RAID adapters.
 
